--- a/app/scss/helpers/_variables.scss
+++ b/app/scss/helpers/_variables.scss
@@ -12,7 +12,7 @@ $color-default-dark: #111111;
 
 // Primary colors
 $color-primary: #062033;
-$color-overlay: #26bb9e;
+$color-overlay: rgba(31,180,149,0.9);
 
 
 // Success colors
