--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -56,7 +56,7 @@ nav {
       font-size: 13px;
       padding: 30px 2px 21px 2px;
       margin:0 15px;
-      boder-top: 1px solid rgba(0,0,0,0);
+      border-top: 1px solid rgba(0,0,0,0);
       outline: 0;
       letter-spacing: 0.05em;
       &:link {
@@ -99,7 +99,8 @@ nav {
     position: absolute;
     //transform: translateX(-50%);
     width: auto;
-    top: 60%;
+    height: fit-content;
+    top: 51.2%;
     @include css3-prefix('transform', 'translate(-50%, -50%)');
     li {
       display: block;
