--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -12,6 +12,10 @@ footer {
     font-family: "Pacifico", serif;
     color: white;
   }
+  div{
+    .col-md-3{
+    }
+  }
   h6 {
     color: white;
     &.description {
@@ -20,8 +24,10 @@ footer {
       font-weight: 300;
       line-height: 18pt;
     }
+
     &.description1 {
       margin-top: 105px;
+      margin-left: 2px;
       font-family: "Open Sans", serif;
       font-weight: 300;
       @media (max-width: 990px){
@@ -56,6 +62,7 @@ footer {
   h5 {
     &.sub {
       margin-top:15px;
+      margin-left:2px;
       font-family: "Open Sans", serif;
       color: white;
       font-weight: 600;
