--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -135,6 +135,8 @@ footer {
       font-family: "Open Sans", serif;
       font-weight: 300;
       border: none;
+      padding-top:0;
+      padding-bottom:0;
       a{
         display: block;
         color: white;
@@ -142,7 +144,8 @@ footer {
         text-decoration: none;
         transition: background .5s ease .300ms;
         @media only screen and (min-width: 980px) {
-          font-size: 12px;
+          font-size: 13px;
+          line-height: 25pt;
         }
         @media only screen and (max-width: 980px) {
           font-size: 11px;
