--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5658,7 +5658,8 @@ nav {
   background-color: #f4f7f9;
   color: #0eb493; }
   .inline-slide .slick-container .slick-item {
-    position: relative; }
+    position: relative;
+    outline: 0; }
   .inline-slide .slick-container ul.slick-dots {
     position: relative;
     left: 51%;
@@ -5674,8 +5675,8 @@ nav {
       .inline-slide .slick-container ul.slick-dots li button:before {
         content: '';
         display: block;
-        width: 12px;
-        height: 12px;
+        width: 8px;
+        height: 8px;
         border-radius: 50%;
         background-color: transparent;
         border: 1px solid #062033;
@@ -5705,6 +5706,14 @@ nav {
     display: block;
     margin: 16px 0;
     content: ""; }
+  #feature .slick-container .slick-item {
+    outline: 0;
+    position: relative; }
+    #feature .slick-container .slick-item div.col-md-10, #feature .slick-container .slick-item div.col-md-2 {
+      padding: 0; }
+    @media (min-width: 991px) {
+      #feature .slick-container .slick-item div.col-md-2 {
+        text-align: left; } }
 
 #works {
   position: relative;
@@ -5761,7 +5770,7 @@ nav {
 h1.header {
   color: #0eb493;
   font-family: "Open Sans", serif;
-  font-size: 28pt;
+  font-size: 28px;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: -0.02em;
@@ -5769,7 +5778,7 @@ h1.header {
 
 h1.content {
   color: #062033;
-  font-size: 20pt;
+  font-size: 20px;
   font-family: "Open Sans", serif;
   text-align: left;
   font-weight: 600;
@@ -5788,7 +5797,7 @@ h1.content-name {
 h4.background {
   position: relative;
   z-index: 1;
-  font: 15pt 'Open Sans';
+  font: 13pt 'Open Sans';
   margin-top: 0;
   text-align: center;
   font-weight: 600;
@@ -5821,11 +5830,11 @@ h4.background {
 
 p.content {
   color: #062033;
-  opacity: 0.8;
   font-size: 12pt;
   font-family: "Open Sans", serif;
   text-align: left;
-  font-weight: 600; }
+  font-weight: 600;
+  opacity: 0.8; }
   @media only screen and (min-width: 1280px) {
     p.content {
       font-size: 15pt; } }
@@ -5836,9 +5845,12 @@ p.content {
     text-align: center; }
   p.content.name {
     color: #062033;
-    font-size: 11pt;
+    font-size: 13px;
     font-family: "Open Sans", serif;
-    margin-top: 17px; }
+    margin-top: 17px;
+    font-weight: 400;
+    opacity: 0.7;
+    line-height: 21px; }
     #team p.content.name {
       margin-top: 8px; }
   #works p.content, #contact p.content {
@@ -5993,7 +6005,7 @@ p.content {
   #contact h6.location {
     margin-top: 40px;
     font-family: "Open Sans", serif;
-    color: #062033;
+    color: rgba(6, 32, 51, 0.6);
     line-height: 20pt; }
   #contact .contact-form {
     margin-top: 20px; }
@@ -7301,7 +7313,7 @@ footer {
   background-color: #1ea78d;
   border-top: 5px solid #062033; }
   footer .container {
-    padding-bottom: 112px; }
+    padding-bottom: 95px; }
   footer h2.brand {
     font-family: "Pacifico", serif;
     color: white; }
