--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -250,7 +250,7 @@ p{
     font-weight: 600;
     opacity: 0.8;
     @media only screen and (min-width: 1280px) {
-      font-size: 15pt;
+      font-size: 18px;
       }
     @media (max-width: 991px) {
       text-align: center;
