--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -35,6 +35,7 @@ nav {
     @media  (max-width: 768px) {
       font-size: 9pt ;
     }
+    vertical-align: top;
   }
   .dash{
     color: #17526e;
@@ -43,6 +44,7 @@ nav {
     font-family: "Open Sans", serif;
     font-size: 13pt;
     text-decoration: none;
+    vertical-align: top;
   }
 
 }
