--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -420,9 +420,9 @@ p{
   margin-top: 25px;
   &.title{
     #feature &{
-      margin-top: 67px;
+      margin-top: 72px;
     }
-    margin-top: 90px;
+    margin-top: 94px;
   }
   &.heart{
     margin-top: 17px;
@@ -699,7 +699,7 @@ p{
       font-family: "Open Sans";
       font-weight: 600;
       @media (min-width: 1048px ){
-        font-size: 60pt;
+        font-size: 60px;
       }
     }
     h4{
