--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -692,6 +692,10 @@ p{
     background-color: rgba(6,32,51,0.8);
     padding-bottom: 155px;
   }
+  //.row{
+  //  margin-right: 0;
+  //  margin-left: 0;
+  //}
   .text-center{
     color: rgb(255,255,255);
     h1{
